// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@deepkit/type transforms should create a Document from a Class 1`] = `
Object {
  "__v": 0,
  "_id": Any<String>,
  "confidentialProperty": "confident1",
  "email": "nobody1@someone.org",
}
`;

exports[`@deepkit/type transforms should transform a POJO to a Class, store it, retrieve it, and transform it back to a POJO 1`] = `
Object {
  "__v": 0,
  "_id": Any<String>,
  "confidentialProperty": "confident2",
  "email": "nobody2@someone.org",
}
`;
